# clad

./: .gitpod.dockerfile  .gitpod.yml  Dockerfile
.github/workflows/: ci.yml
demos/ComputerGraphics/smallpt/: SmallPT.cpp
docs/: CMakeLists.txt  FindSphinx.cmake  doxygen.cfg.in
docs/sphinx/: conf.py  index.rst
docs/userDocs/source/: conf.py
include/clad/Differentiator/: Array.h  Tape.h  (+15 more)
lib/Differentiator/: BaseForwardModeVisitor.cpp  CMakeLists.txt  CladUtils.cpp  DerivativeBuilder.cpp  DerivedFnInfo.cpp  DiffPlanner.cpp  DiffPlanner.h  ErrorEstimator.cpp  EstimationModel.cpp  ForwardModeVisitor.cpp  HessianModeVisitor.cpp  JacobianModeVisitor.cpp  MultiplexExternalRMVSource.cpp  ReverseModeVerifier.cpp  ReverseModeVisitor.cpp  StmtClone.cpp  VisitorBase.cpp
scripts/: bar  build  build_clad.sh  compile_commands.json  install_dependencies.sh  update_clad.sh
test/Arrays/: ArrayInputsReverseMode.C
test/CUDA/: GradientCuda.cu
test/ErrorEstimation/: Assignments.C  BasicOps.C  LoopsAndArrays.C  LoopsAndArraysExec.C
test/FirstDerivative/: BuiltinDerivatives.C  ClassMethodCall.C  Overloads.C  StructMethodCall.C  VirtualMethodsCall.C
test/ForwardMode/: FunctorErrors.C  Functors.C  MemberFunctions.C  Pointers.C  STLCustomDerivatives.C  TemplateFunctors.C  UserDefinedTypes.C
test/Functors/: Simple.C
test/Gradient/: FunctionCalls.C  Gradients.C  Lambdas.C  Loops.C  MemberFunctions.C  STLCustomDerivatives.C  Switch.C  SwitchInit.C  UserDefinedTypes.C
test/Hessian/: Arrays.C  BuiltinDerivatives.C  Hessians.C  Pointers.C
test/Jacobian/: Jacobian.C
test/Misc/: Args.C  RunDemos.C
test/NestedCalls/: NestedCalls.C
test/ROOT/: TFormula.C
tools/: ClangPlugin.cpp  ClangPlugin.h  DerivedFnInfo.cpp  DerivedFnInfo.h
